# qsl-server

./: CHAT_STARTER.md  Cargo.toml  DECISIONS.md  NEXT_ACTIONS.md  README.md  START_HERE.md  TRACEABILITY.md
.github/workflows/: ci.yml
docs/server/: DOC-SRV-001_Deployment_Hardening_Contract_v1.0.0_DRAFT.md  DOC-SRV-002_Systemd_Hardening_Plan_v1.0.0_DRAFT.md
scripts/: install_ubuntu_24_04_systemd.sh  verify_remote.sh
src/: lib.rs  main.rs
systemd/: qsl-server.service
tests/: NA-0002_server_hardening_plan.md  relay_smoke.rs  smoke.rs
